--- a/Day 3 of JavaScript/index.html
+++ b/Day 3 of JavaScript/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="box"></div>
+    <button id="btn">Change Color</button>
     
 
 
